fixed weird spacing to to a container

--- a/src/components/NavButtons/NavButtons.css
+++ b/src/components/NavButtons/NavButtons.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   gap: 47px;
-  margin-top: 10px;
+  margin-top: 15px;
 
 }
 
