--- a/src/components/PoemPage/PoemPage.css
+++ b/src/components/PoemPage/PoemPage.css
@@ -12,11 +12,11 @@
 }
 
 .chineseInfoContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
   /* margin-top: 35%; */
-  text-align: center;
+  /* text-align: center; */
 }
 
 /* ------------------- */
